# avdp_homework

./: .gitignore  README.md
devel/: .catkin  .rosinstall  setup.sh
devel/include/cav_msgs/: Control.h  Goal.h  Gpybm.h  Obstacle.h  ObstacleVec.h  PlanedPath.h  Point.h  RefPoint.h  VehicleState.h
devel/lib/cav_control/: cav_control
devel/lib/cav_path_pub/: circle_path.py  sine_path.py
devel/lib/cav_traj_gen/: cav_traj_gen
devel/lib/pkgconfig/: cav_control.pc  cav_msgs.pc  cav_path_pub.pc  cav_traj_gen.pc  cssr.pc
devel/lib/python3/dist-packages/cav_msgs/msg/: _Control.py  _Goal.py  _Gpybm.py  _Obstacle.py  _ObstacleVec.py  _PlanedPath.py  _Point.py  _RefPoint.py  _VehicleState.py  __init__.py
devel/share/cav_control/cmake/: cav_controlConfig.cmake
devel/share/cav_msgs/cmake/: cav_msgs-msg-extras.cmake  cav_msgs-msg-paths.cmake  cav_msgsConfig.cmake
devel/share/cav_path_pub/cmake/: cav_path_pubConfig.cmake
devel/share/cav_traj_gen/cmake/: cav_traj_genConfig.cmake
devel/share/common-lisp/ros/cav_msgs/msg/: Control.lisp  Goal.lisp  Gpybm.lisp  Obstacle.lisp  ObstacleVec.lisp  PlanedPath.lisp  Point.lisp  RefPoint.lisp  VehicleState.lisp  _package.lisp  _package_Control.lisp  _package_Goal.lisp  _package_Gpybm.lisp  _package_Obstacle.lisp  _package_ObstacleVec.lisp  _package_PlanedPath.lisp  _package_Point.lisp  _package_RefPoint.lisp  cav_msgs-msg.asd  (+1 more)
devel/share/cssr/cmake/: cssrConfig.cmake
devel/share/roseus/ros/cav_msgs/: manifest.l
docs/CSSR/: README.md
docs/cav_traj_gen/html/: CMakeLists_8txt.html  UTM_8h.html  UTM_8h__dep__incl.map  UTM_8h__dep__incl.md5  UTM_8h__incl.map  UTM_8h__incl.md5  UTM_8h_source.html  XM__angle_8h.html  XM__angle_8h__dep__incl.map  XM__angle_8h__dep__incl.md5  XM__angle_8h__incl.map  XM__angle_8h__incl.md5  XM__angle_8h_source.html  XM__base_8h.html  XM__base_8h__dep__incl.map  XM__base_8h__dep__incl.md5  XM__base_8h__incl.map  XM__base_8h__incl.md5  XM__base_8h_source.html  XM__define_8h.html  XM__define_8h__dep__incl.map  XM__define_8h__dep__incl.md5  XM__define_8h__incl.map  XM__define_8h__incl.md5  XM__define_8h_source.html  XM__distance_8h.html  XM__distance_8h__dep__incl.map  XM__distance_8h__dep__incl.md5  XM__distance_8h__incl.map  XM__distance_8h__incl.md5  XM__distance_8h_source.html  XM__line_8h.html  XM__line_8h__dep__incl.map  XM__line_8h__dep__incl.md5  XM__line_8h__incl.map  XM__line_8h__incl.md5  XM__line_8h_source.html  XM__path_8h.html  XM__path_8h__dep__incl.map  XM__path_8h__dep__incl.md5  (+458 more)
docs/cav_traj_gen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  defines_0.js  defines_1.js  (+77 more)
docs/cav_traj_gen/latex/: UTM_8h.tex  UTM_8h__dep__incl.md5  UTM_8h__incl.md5  XM__angle_8h.tex  XM__angle_8h__dep__incl.md5  XM__angle_8h__incl.md5  XM__base_8h.tex  XM__base_8h__dep__incl.md5  XM__base_8h__incl.md5  XM__define_8h.tex  XM__define_8h__dep__incl.md5  XM__define_8h__incl.md5  XM__distance_8h.tex  XM__distance_8h__dep__incl.md5  XM__distance_8h__incl.md5  XM__line_8h.tex  XM__line_8h__dep__incl.md5  XM__line_8h__incl.md5  XM__path_8h.tex  XM__path_8h__dep__incl.md5  XM__path_8h__incl.md5  XM__point_8h.tex  XM__point_8h__dep__incl.md5  XM__point_8h__incl.md5  XMath_8h.tex  XMath_8h__dep__incl.md5  XMath_8h__incl.md5  annotated.tex  assit_8cpp.tex  assit_8cpp__incl.md5  battery_8cpp.tex  battery_8cpp__incl.md5  battery_8h.tex  battery_8h__dep__incl.md5  battery_8h__incl.md5  classBattery.tex  classBattery__inherit__graph.md5  classBattery_a0461bc01008956fcca4f56cdf9a43dad_cgraph.md5  classBattery_a240813ef9e574e2d6d1e1ed251aa1102_cgraph.md5  classBattery_a240813ef9e574e2d6d1e1ed251aa1102_icgraph.md5  (+177 more)
src/: CMakeLists.txt  requirements.txt
src/CSSR/: CMakeLists.txt
src/CSSR/launch/: config.json  cssr.launch
src/CSSR/logs/0225_194347/: config.json
src/CSSR/logs/0319_161414/: config.json
src/CSSR/logs/0320_145600/: config.json
src/CSSR/logs/0320_145705/: config.json
src/CSSR/logs/0320_145817/: config.json
src/cav_control/: CMakeLists.txt  package.xml
src/cav_control/include/: dataModel.hpp  globalDef.hpp  xdefine.hpp
src/cav_control/launch/: xproj_control_gui_YHS.launch
src/cav_control/src/: main.cpp
src/cav_control/src/path_track/: path_track.cpp  path_track.h
src/cav_control/src/rosNode/: pub.cpp  recv.cpp  rosNode.h
src/cav_control/src/speed_track/: speed_track.cpp  speed_track.h
src/cav_msgs/: CMakeLists.txt
src/cav_msgs/msg/: Control.msg  Goal.msg  Gpybm.msg  Obstacle.msg  ObstacleVec.msg  PlanedPath.msg  Point.msg  RefPoint.msg  VehicleState.msg
src/cav_path_pub/: CMakeLists.txt  package.xml
src/cav_path_pub/launch/: cav_path_pub.launch
src/cav_path_pub/scripts/: circle_path.py  line_path.py  path_pub.py  sine_path.py
src/cav_traj_gen/: CMakeLists.txt  Doxygen.config  package.xml
src/cav_traj_gen/include/: dataDefine.hpp  globalDef.hpp
src/cav_traj_gen/include/math/: UTM.h  XM_angle.h  XM_base.h  XM_define.h  XM_distance.h  XM_line.h  XM_path.h  XM_point.h  XMath.h  draw_3d_base.h  spline.h
src/cav_traj_gen/launch/: cav_traj_gen.launch
src/cav_traj_gen/src/: main.cpp
src/cav_traj_gen/src/GUI/: gui.cpp  gui.h  gui.ui  light color.xml  mainloop.cpp
src/cav_traj_gen/src/GUI/widgets/: info.cpp
src/cav_traj_gen/src/GUI/widgets/3d_display/: display_3d.cpp  display_3d.h  display_3d_mode1.cpp  display_3d_mode2.cpp  objloader.cpp  objloader.h
src/cav_traj_gen/src/GUI/widgets/battery/: battery.cpp  battery.h
src/cav_traj_gen/src/path_slicer/: path_slicer.cpp  path_slicer.h
src/cav_traj_gen/src/rosNode/: pub.cpp  recv.cpp  rosNode.h
src/cav_traj_gen/src/traj_generator_template/include/: opt.h
src/cav_traj_gen/src/traj_generator_template/src/: assit.cpp  opt.cpp
(+19 files in other folders)
