<?xml version="1.0"?>
<package format="2">
  <name>cav_path_pub</name>
  <version>0.0.0</version>
  <description>Publish reference path</description>
  <maintainer email="sheree618@163.com">shangyi</maintainer>
  <license>TODO</license>
  <author email="sheree618@163.com">shangyi</author>

 
  <buildtool_depend>catkin</buildtool_depend>

  <depend>cav_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
 
  <exec_depend>roslaunch</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
