<?xml version="1.0"?>
<package format="2">
  <name>cav_traj_gen</name>
  <version>0.0.0</version>
  <description>The cav_traj_gen package</description>
  <maintainer email="shaobxu@gmail.com">shaobing xu and shangyi li</maintainer>
  <license>TODO</license>
  <author email="shaobxu@gmail.com">shaobing xu and shangyi li</author>

 
  <buildtool_depend>catkin</buildtool_depend>

  <depend>cav_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
 
  <exec_depend>roslaunch</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
